# agent-watch

./: .gitignore  CODEBASE_REVIEW.md  Cargo.toml  Makefile  README.md  todo.md
.github/workflows/: ci.yml
app/MacAgentWatch/: Signing.xcconfig
app/MacAgentWatch/MacAgentWatch/: ContentView.swift  MacAgentWatchApp.swift
app/MacAgentWatch/MacAgentWatch.xcodeproj/: project.pbxproj
app/MacAgentWatch/MacAgentWatch/Core/: AppTheme.swift  ConfigTypes.swift  CoreBridge.swift  MonitoringTypes.swift  NotificationManager.swift
app/MacAgentWatch/MacAgentWatch/ViewModels/: MonitoringViewModel.swift
app/MacAgentWatch/MacAgentWatch/Views/: AccessibilityPreviews.swift  ActivityCardsView.swift  ChartsView.swift  DashboardView.swift  EventDetailView.swift  EventRowView.swift  FilterBarView.swift  LiveLogView.swift  MenuBarView.swift  SessionListView.swift  SettingsView.swift
app/MacAgentWatch/MacAgentWatch/en.lproj/: Localizable.strings
app/MacAgentWatch/MacAgentWatchTests/: CoreBridgeTests.swift  MacAgentWatchTests.swift  MonitoringTypesTests.swift  MonitoringViewModelTests.swift
cli/: Cargo.toml
cli/locales/en/: main.ftl
cli/src/: i18n.rs  main.rs
core/: Cargo.toml
core/src/: agent_detector.rs  config.rs  detector.rs  error.rs  event.rs  ffi.rs  fswatch.rs  lib.rs  logger.rs  netmon.rs  process_tracker.rs  risk.rs  sanitize.rs  sqlite_storage.rs  storage.rs  types.rs  wrapper.rs
scripts/: build-ffi.sh  e2e-test.sh  setup-signing.sh
