[workspace]
resolver = "2"
members = ["core", "cli"]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["MacAgentWatch Contributors"]
license = "MIT"
repository = "https://github.com/your-org/macagentwatch"
description = "macOS/iOS native AI agent monitoring and security tool"

[workspace.dependencies]
# Core dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

# PTY support
portable-pty = "0.8"

# macOS process tracking
libproc = "0.14"

# CLI
clap = { version = "4", features = ["derive"] }
colored = "3"

# Testing
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"

# v0.2.0: Config, FSEvents, Network monitoring
toml = "0.8"
dirs = "5"
glob = "0.3"
fsevent = "2"
