[package]
name = "macagentwatch"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI for MacAgentWatch - AI agent monitoring tool"

[[bin]]
name = "macagentwatch"
path = "src/main.rs"

[dependencies]
macagentwatch-core = { path = "../core" }
clap.workspace = true
anyhow.workspace = true
colored.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
